fix: form design, input are all aligned

--- a/src/app/components/form-eye-size/form-eye-size.component.css
+++ b/src/app/components/form-eye-size/form-eye-size.component.css
@@ -12,10 +12,8 @@
 }
 
 .input-label-combo {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
     gap: 20px;
 }
 
