--- a/src/app/components/form-tears-eyes/form-tears-eyes.component.css
+++ b/src/app/components/form-tears-eyes/form-tears-eyes.component.css
@@ -12,10 +12,8 @@
 }
 
 .input-label-combo {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
     gap: 20px;
 }
 
@@ -37,7 +35,6 @@ select {
     padding: 6px;
     border: none;
     width: 100%;
-    margin-left: 20px;
 }
 
 select:hover {
